naramalk formable and estuary

--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -198,3 +198,6 @@
  
  marudesa_reform_nation_title: "Reform Into Renaraja"
  marudesa_reform_nation_desc: "We Control most of the Daskivistar desert area, and have made significant progress on reforming our country, it is time we reform into a proper state."
+
+ naramalk_nation_title: "Unite the River Realm @NRM"
+ naramalk_nation_desc: "With the river kingdoms united, we must strive to build something bigger and even holier."
