--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -51,6 +51,7 @@
  dammamate_estuary_modifier: "Dammamate Estuary"
  ngamba_estuary_modifier: "Ngamba Estuary"
  atayala_estuary_modifier: "Atayala Estuary"
+ oyar_estuary_modifier: "Oyar Estuary"
  
 
  uzkolian_toll: "Uzkolian Toll"
