--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -95,7 +95,7 @@
  musarfic_folklore_rebels_demand: "Convert $COUNTRYNAME$"
 
  ilumist: "Ilumist"
- ilumist_religion_desc: "Ilumists are the followers of god Ilum who sent prophets on earth to teach people about a pious and good life. Members of this church follow only a specific set of prophets which hasn't changed for past 2000 years."
+ ilumist_religion_desc: "Ilumists are the followers of the highest god Ilum who sent prophets on earth to teach people about a good and pious life. Members of this church follow only a specific set of prophets, with the canon remaining unchanged for the past two millenia."
  tahimali: "Tahimali"
  ilumist_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  ilumist_rebels_title: "Religious"
@@ -104,6 +104,7 @@
  ilumist_rebels_demand: "Convert $COUNTRYNAME$"
 
  qubrayian: "Qubrayian"
+ qubrayian_religion_desc: "While people of Mesutia follow a wide variety of gods, many of those cults pale in comparison to the popularity of river spirits and gods. Those gods all pay tributes to the highest deity of water, Qubray."
  qubrayian_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  qubrayian_rebels_title: "Religious"
  qubrayian_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
