fixes and area names

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1108,3 +1108,22 @@
  bagoer_area: "Bagoer"
  futai_area: "Futai"
  tenfun_area: "Tenfun"
+
+ hinodemori_area: "Hinodemori"
+ akaki_area: "Akaki"
+ kitakaigan_area: "Kitakaigan"
+ haiirooka_area: "Haiirooka"
+ south_shikoku_area: "South Shikoku"
+ north_shikoku_area: "North Shikoku"
+ western_victoria_area: "Western Victoria"
+ new_bethelia_area: "New Bethelia"
+ eastern_victoria_area: "Eastern Victoria"
+ daneenu_area: "Daneenu"
+ tsenaa_area: "Tsenaa"
+ eastern_marland_area: "Eastern Marland"
+ western_marland_area: "Western Marland"
+ galana_area: "Galana"
+ tilketa_area: "Tilketa"
+ southern_kuyama_area: "Southern Kuyuma"
+ northern_kuyama_area: "Northern Kuyama"
+ midlands_area: "Midlands"
