--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -94,5 +94,5 @@
  palmisian.1003.t: "Chapter of Sal"
  palmisian.1003.desc: "With divergence in Palmisianist doctrine, local formed chapter is trying to convince us to fully adopt their doctrines. Doing so will ensure their support in many manners, but we will cut our ties with liemarian church."
  palmisian.1003.a: "No Prophets, Only Sal"
- palmisian.1003.a: "We can't Abandon our Brothers"
+ palmisian.1003.b: "We can't Abandon our Brothers"
  
