--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -120,3 +120,6 @@
  indrigerland_mines_of_huipet_desc: "While travelling along the rivers, many of our people started to notice glittery dust which was dyeing the river. Soon after, large amounts of metals hav been found in various places, such as iron in Báhcaveaivi and, more importantly, copper in Dálvadasvuopmi, which has proved to be of great importance, considering its growing importance in cannonmaking."
  indrigerland_a_boreal_empire: "A Boreal Empire"
  indrigerland_a_boreal_empire_desc: "With colonies in the new world and many outposts along the Syvämetsän coast, we have found ourselves controlling distant, disconnected lands. To protect them and ensure their loyalty to the state, a large, a new fleet is needed. The old fishing vessels will need to be abandoned and our new, professional and modern navy will reign on the seas."
+
+ decision_join_tummland_title: "Join Tummland"
+ decision_join_tummland_desc: "We should join our brothers across the border rather than be close with those pesky Ehrens."
