--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -942,7 +942,8 @@
  incident_refused_to_help: "Refused to Help"
  ostsee_embargo_mod: "Lack of Resources"
  desc_ostsee_embargo_mod: "We can't effectively import resources from abroad due to the embargo against the empire."
- po_incident_embargo_war: "Trade Domination"
+ CB_ALLOWED_po_incident_embargo_war: "Ostsee Trade Domination"
+ po_incident_embargo_war: "Ostsee rade Domination"
  PEACE_po_incident_embargo_war: "§VTrade Domination§!"
  po_incident_embargo_war_desc: "Gain §G10§! Imperial Influence\nGain §G10§! Power Projection."
 
