--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -6,7 +6,7 @@
  eastern_silvestria_region: "Eastern Silvestria"
  bogiland_region: "Bogiland"
  noordland_region: "Noordland"
- greater_gyrdia_region: "Greater Gyrdia"
+ greater_gyrdia_region: "Gyrdia"
  argenia_region: "Dorchean Isles"
  chilverchia_region: "Chilverchia"
  marstonia_region: "Marstonia"
