--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -62,10 +62,20 @@
 
  palmisianism: "Palmisianist"
  palmisianism_religion_desc: "During Liemarian Reformation one of the schools gained relevancy and became one of most influencial movements in Liemarianism. Beliving that emperors moved too far from Sal's original teachings and returning to them is the only way to salvation. But with time and further centralistion of power in Episcopate more radical members of Palmisianism started to slowly distance themselves from entire Reformation movement. In the end entire movement decided to leave Liemarianism and spread their faith themselves. Since then movement radicalised into believing that only Sal and his legitimate could function as religious icons, with some believing that it is only Sal that could represent God."
+ palmisianism_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ palmisianism_rebels_title: "Religious"
+ palmisianism_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ palmisianism_rebels_army: "$RELIGION$ Army"
+ palmisianism_rebels_demand: "Convert $COUNTRYNAME$"
  chapterists: "Chapterists"
 
  sacellist: "Sacellist"
  sacellist_religion_desc: "During the twelveth century, there was a major discourse related to the tolerance and inclusion of certain heathenous and pagan beliefs in the Saelian church. After countless debates and synods, it was decided by emperor and the tetrarchy to new core tenets, such as always calling God the same name regardless of rite, prohibition of human and animal sacrifice, ban on all types of concubinates, and new limitations on angelic cults. Many groups were opposing the new doctrines, however those close to the heart of the empire were quickly eradicated thanks to the powerful at a time inquisition.\n\nAs of the fifteenth century, the only eastern Sigilians (also known as vetustans and sacellists) remain in Kakigia. While the specific beliefs of groups in Morvania, Puraidemaa and Vorracia differ, they still maintain contact and dialogue with each other."
+ sacellist_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ sacellist_rebels_title: "Religious"
+ sacellist_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ sacellist_rebels_army: "$RELIGION$ Army"
+ sacellist_rebels_demand: "Convert $COUNTRYNAME$"
  maranist: "Maranist"
 
 
@@ -180,6 +190,7 @@
  labosian_folklore_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  labosian_folklore_rebels_army: "$RELIGION$ Army"
  labosian_folklore_rebels_demand: "Convert $COUNTRYNAME$"
+ leantoiri: "Leantóirí Carraige"
 
  silvestrine_mythology: "Silvestrine Mythos"
  silvestrine_mythology_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -187,8 +198,7 @@
  silvestrine_mythology_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  silvestrine_mythology_rebels_army: "$RELIGION$ Army"
  silvestrine_mythology_rebels_demand: "Convert $COUNTRYNAME$"
-
-
+ die_heretic: "Diejenigen, die wirklich gerne Met trinken"
 
 
 
@@ -365,6 +375,7 @@
  orundes_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  orundes_rebels_army: "$RELIGION$ Army"
  orundes_rebels_demand: "Convert $COUNTRYNAME$"
+ zunim: "Zunim"
 
  navch: "Navch"
  navch_religion_desc: "Navch is very grounded in the life cycle of beings, Merhaan and other trees lose their leaves just to replace them with new ones. With the idea that new replaces the old, a system where old wise people teach and lead young towards true enlightenment."
@@ -597,7 +608,7 @@
  midnima_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  midnima_rebels_title: "Religious"
  midnima_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
- midnimas_rebels_army: "$RELIGION$ Army"
+ midnima_rebels_army: "$RELIGION$ Army"
  midnima_rebels_demand: "Convert $COUNTRYNAME$"
  hayasi: "Hayasi"
  
