--- a/localisation/cossacks_l_english.yml
+++ b/localisation/cossacks_l_english.yml
@@ -1379,9 +1379,9 @@
  estate_disasters.10.d: "$MONARCH$ has allowed the $ESTATE_COSSACKS$ of $COUNTRY$ to grow too powerful and now they have made their move. Their great influence over the Steppes as well as over many matters in [Root.Owner.Capital.GetCapitalName] has allowed them to prepare to break off into an entirely new state."
  estate_disasters.10.a: "We should have seen this coming..."
  estate_disasters.10.b: "The steppes are calling me..."
- estate_disasters.11.t: "The Marathas Break Free"
- estate_disasters.11.d: "Maratha leaders have come to exercise such far-ranging authority over large areas of our state that it has now come to the point where the $MONARCHTITLE$ has had to accept that [Root.Monarch.GetSheHe] no longer has any practical control over them. With the crowning of a leader of their own the transition is complete and our loss of authority over the Marathas total."
- estate_disasters.11.a: "We should have seen this coming..."
+ #estate_disasters.11.t: "The Marathas Break Free"
+ #estate_disasters.11.d: "Maratha leaders have come to exercise such far-ranging authority over large areas of our state that it has now come to the point where the $MONARCHTITLE$ has had to accept that [Root.Monarch.GetSheHe] no longer has any practical control over them. With the crowning of a leader of their own the transition is complete and our loss of authority over the Marathas total."
+ #estate_disasters.11.a: "We should have seen this coming..."
  estate_disasters.11.b: "The future lies with them!"
  estate_disasters.12.t: "The Brahmins Seize Power"
  estate_disasters.12.d: "$MONARCH$ has allowed the Brahmins of $COUNTRY$ to grow too powerful and now they have made their move. While keeping the common people in line through their ties with the divine the Brahmins have used every one of the many means available to them to seize the reins of government. While still ruler in name our $MONARCHTITLE$ is now little more than their puppet."
