--- a/localisation/emperor_missions_l_english.yml
+++ b/localisation/emperor_missions_l_english.yml
@@ -36,3 +36,5 @@
  COUNTRY_NAME_WILL_CHANGE_IN: "Country name will change to $NAME|Y$."
  COUNTRY_NAME_WILL_BE_RESTORED: "Country name will be restored to the original value"
  add_5_crown_land_share: "§Y[Root.GetName]§! gains §G5§! crown land ownership."
+
+ emp_ven_plague_doctor_training_tt: "The citizens of §Y[Root.GetName]§! will be less likely to be struck by plague events."
