--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -232,6 +232,7 @@
  apagtaru_aranya_march_reform_desc: "Aranya March is a special Apagtaru March established by Aranya dynasty, and it's mission is to colonize the eastern forests."
  mechanic_can_siberian_colonize_in_pasmangala_yes: "Can Establish Colonial Frontiers Only in Pasmangala Region."
  future_of_sindalabi_title: "Decide the Future of Sindalabi"
+ future_of_sindalabi_desc: "Aranya March has been established with colonization of eastern forests in mind, but the question stands, do we want to continue with the plan, or abandon it?"
  saryana.1.t: "Future of Aranya March"
  saryana.1.desc: "Aranya March has been established with colonization of eastern forests in mind, but the question stands, do we want to continue with the plan, or abandon it?"
  saryana.1.a: "Restore their March Status"
