--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -296,6 +296,17 @@
  random_conversion_tt: "Every province in §YSaelian§! religious group will have a §Y33%§! chance to become §Y[Root.Religion.GetName]§!."
  hre_modifier_tt: "Reform modifier will be transfered to our newly unified nation."
 
+ HLR_wirosepan: "Impireacht Saletiarn"
+ HLR_wirosepan_ADJ: "Saelian"
+ HLR_agellidian: "Saile Kalmalikar"
+ HLR_agellidian_ADJ: "Saelian"
+ HLR_palmisianist: "Empire of Sal"
+ HLR_palmisianist_ADJ: "Saelian"
+ HLR_sacellist: "Empire of All Things that are Holy"
+ HLR_sacellist_ADJ: "Saelian"
+ HLR_liemarian: "Empire of Saelians"
+ HLR_liemarian_ADJ: "Saelian"
+
  saelian.9.t: "[Root.GovernmentName] of [Root.Owner.GetName] and the Empire"
  saelian.9.desc: "The wind of change has finally struck [Root.GetName]. With the growing ambitions of glorious [Root.Monarch.GetTitle] [Root.Monarch.GetName] we have reached a point where we are the ones to decide our own fate and not be dependent on other states. This poses important question - should we remain loyal to the emperor or stand on our own in this new and changing world?"
  saelian.9.a: "We shall remain faithful to [Emperor.Monarch.GetName]."
