--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  LOADING_TIP_0: "Maqitan Piracy and Turmoil in the steppe has led many navigators to search for new trade routes to Hengtua in the west."
- LOADING_TIP_1: "Early Ehrenis and Argenians were famous for their raids along the coast of Silvestria, sea of Furmaria and even as far as Camaria."
+ LOADING_TIP_1: "Early Ehrens and Argenians were famous for their raids along the coast of Silvestria, sea of Furmaria and even as far as Camaria."
  LOADING_TIP_2: "Kalmaqan was a Yaltazim state which unified the Aqerbic Peninsula in the VII century."
  LOADING_TIP_3: "Donuçakar converted to Saelianism after a diplomatic pact between the king and the Sigilian Emperor in the XIII century."
  LOADING_TIP_4: "Through the ages, the title of Eneratian emperor has lost all meaning and splendor, with current holder being held by an insignificant Cyrille de Cuei."
@@ -19,7 +19,7 @@
  LOADING_TIP_17: "Grafoulan monk Liemar was not the first to attempt reforming the Saelian Church, but he surely was the most successful."
  LOADING_TIP_18: "Saelius died from trichinosis."
  LOADING_TIP_19: "Absolutist monarchy of Bogiland of the XVII century became a role-model for other powerful states in Mysentria."
- LOADING_TIP_20: "Many people in Tummland believe that Ehrenis are the literal servants of evil spirit Ilkeä."
+ LOADING_TIP_20: "Many people in Tummland believe that Ehrens are the literal servants of evil spirit Ilkeä."
  LOADING_TIP_21: "King Pepik 'The Mad' owned 2 boars, 3 camels and an elephant."
  LOADING_TIP_22: "After the fall of the Bunelisuli Empire the throne was usurped by the two younger brothers of the legitimate khan - Markörgis Ariunuulyn."
  LOADING_TIP_23: "The Hengtuan nations widely embraced gunpowder warfare much earlier than Mysentria, but it was the west that perfected the technology."
