--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1127,3 +1127,21 @@
  southern_kuyama_area: "Southern Kuyuma"
  northern_kuyama_area: "Northern Kuyama"
  midlands_area: "Midlands"
+
+ mejietate_area: "Mejietate"
+ vaanosa_area: "Vaanosa"
+ mahaati_area: "Mahaati"
+ dakhafora_area: "Dakhafora"
+ utumasul_area: "Utumasul"
+ baigani_area: "Baigani"
+ chungmapwa_area: "Chungmapwa"
+ chakura_area: "Chakura"
+ south_kisiwarefu_area: "South Kisiwarefu"
+ north_kisiwarefu_area: "North Kisiwarefu"
+ wameremet_area: "Wameramet"
+ ito_area: "Ito"
+ gabo_area: "Gabo"
+ karuan_area: "Karuan"
+ dittelim_area: "Dittelim"
+ jiniciir_area: "Jiniciir"
+ fuva_area: "Fuva"
