Bhahana Ideas and Devatarastra Formable + content

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -217,6 +217,24 @@
  saryana_imperial_law_codex: "Imperial Law Codex"
  saryana_imperial_law_codex_desc: "Imperial Ambitions of Saryana and Southward expansion saw the need to reorganize the law codex, update and simplify the legislation, and ensure every subject of our future glorious empire can live in a just, fair, and law-respecting state. In that spirit Saryanian ruler Pallab VI in 1567 created the first Imperial Law Codex."
  
+ bhahana_ideas: "Bhahanian Ideas"
+ bhahana_ideas_bonus: "Bhahanian Ambition"
+ bhahana_ideas_start: "Bhahanian Traditions"
+ bhahana_will_of_the_deva: "Will of the Deva"
+ bhahana_will_of_the_deva_desc: "Deva, meaning Human that has become a god, are the most important entities in Desjaniti faith. The First Deva, Kamal Rajana, wished to unite all of Maisetra under Bhahana rule, and we shall deliver the Deva's will."
+ bhahana_spread_the_words_of_deva: "Spread the Words of Deva"
+ bhahana_spread_the_words_of_deva_desc: "Words of Deva are rules, and are absolute, and Deva wants us to spread his word all across the world, so we shall bear Deva's will, and spread faith in the Devatas all around!"
+ bhahana_pakapujari_academies: "Pakapujari Academies"
+ bhahana_pakapujari_academies_desc: "Pakapujari are the religious caste overseeing the implementation of Deva's will in legislation and lawmaking, and are tasked with promoting wisdom and science so more people can ascend and we could get a new Deva, so in that spirit, Pakapujari are started opening Free, Compulsory Academies for the masses."
+ bhahana_bharati_system: "Bharati System"
+ bhahana_bharati_system_desc: "Bharati System is a religious in nature conscription system of Bhahana, which is complusory for every male desjaniti faithful that is of age between 14 and 35, and is demanded to serve atleast 8 years in the Deva's armies."
+ bhahana_religious_administration: "Religious Administration"
+ bhahana_religious_administration_desc: "Unlike most other countries, where nobility is tasked with overseeing the administration of bigger administrative units, in Bhahana, it is a job of Pakapujari, the local clergy caste, and they are tasked with this since the Harshad Rajana reformed the administration of Pakapujarirajya in 1379."
+ bhahana_devatarastra: "Devatarastra"
+ bhahana_devatarastra_desc: "Devatarastra, meaning Devata Empire, is a concept created by Deva Bhavana Devata in the early XVIth century, and was made reality a few decades later by his successor Madhukar Devata, and said political entity spanned most of Maisetra."
+ bhahana_kharajosa: "Kharajosa"
+ bhahana_kharajosa_desc: "Kharajosa is a type of mentality that every Desjaniti soldiers under service of Pakapujarirajya shows, and is full of loyalty to the cause and selfless sacrifice, ready to die for the faith and the Deva."
+ 
  apagtaru_kingdom_reform: "Apagtaru Kingdom"
  apagtaru_kingdom_reform_desc: "Apagtaru Kingdom is most prestigious governing body in Apagtaru lands, and it commands all of the Apagtaru people in the will of Gods. It is heavily anti-burghers due to it's long history."
  
@@ -227,6 +245,9 @@
  lost_legion_reform_desc: "Lost Legion of Sarviraja Empire, that has been lost in the desert of Daskivistar and established it's own state there."
  legacy_of_lost_legion_reform: "Legacy of Lost Legion"
  legacy_of_lost_legion_reform_desc: "Although our state isn't just a mimicry of a country anymore, we still derive much of our military experience from our legionary past."
+ 
+ devatarastra_reform: "Devatarastra"
+ devatarastra_reform_desc: "We have united most of Maisetra under Deva's rule, it is time for us to do gods' work, and start educating the masses."
  
  apagtaru_aranya_march_reform: "Aranya March"
  apagtaru_aranya_march_reform_desc: "Aranya March is a special Apagtaru March established by Aranya dynasty, and it's mission is to colonize the eastern forests."
@@ -250,6 +271,11 @@
  LEGION_HEIR_F: "Legionnaire Diikarii"
  PAKAPUJARIRAJYA: "Pakapujarirajya"
  SARVOCCAPAKAPUJARI: "Sarvoccapakapujari"
+ SARVOCCADEVATA: "Sarvoccadevata"
+ devatarastra_form_decision_title: "Proclaim the Devatarastra"
+ devatarastra_form_decision_desc: "It is time we realize our long-standing ambition of united Desjaniti state."
  
  RENARAJA: "Renaraja"
  RENARAJA_ADJ: "Renaraji"
+ DEVATARASTRA: "Devatarastra"
+ DEVATARASTRA_ADJ: "Devatarastri"
