--- a/localisation/diplomacy_l_english.yml
+++ b/localisation/diplomacy_l_english.yml
@@ -897,4 +897,5 @@
  CLAIMSTATETITLE: "Fabricate Claim on Area"
  CLAIMSTATETITLEDESC: "Fabricate a claim on all provinces in an area."
  CLAIM_STATE_SELECT_DESC: "Fabricate Claim on Area will reduce the size of our $ADJ|Y$ Spy Network by $COST|R$ and give us claims on all $ADJ$ provinces in §Y$AREA$§W. The claims will last for $YEARS|Y$ years."
-
+ #Taedium
+ NEEDS_TO_FINISH_PASMANGALA_COLONIES: "Cannot Annex an Aranya march that has active colonists in Pasmangala region."
