imperial reform readability improvements + saelian empire start adjustments + other stuff

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -1145,11 +1145,11 @@
  ALREADY_THIS_IMP_REFORM: "The Empire has already enacted '§Y$WHICH$§!'."
  TOO_FAR_AHEAD_THIS_IMP_REFORM: "$WHICH$ is a reform that is too advanced, we need to enact other reforms first."
  NOT_ENOUGH_BACKERS_IMP_REFORM: "To pass the reform, there must be more princes supporting than opposing it."
- NOT_ENOUGH_AUTHORITY_IMP_REFORM: "§RYou need at least §R$COST$§! Imperial Authority, but you only have §Y$CURR$§!."
+ NOT_ENOUGH_AUTHORITY_IMP_REFORM: "§RYou need at least §R$COST$§! Imperial Authority, but you only have §Y$CURR$§!.§!"
  ENACT_REFORM: "Enacting §Y$REFORM$§! will remove all your current Imperial Authority."
  MEMBER_BACKING_DUE_TO: "They are backing the reform $REFORM|Y$ ($SCORE$) due to:\n"
  MEMBER_OPPOSE_DUE_TO: "They oppose the reform $REFORM|Y$ ($SCORE$) due to:\n"
- FOLLOWING_BACK_IMP_REF: "There are $COUNT_FOR|G$ princes in favor of the reform and $COUNT_AGAINST|R$ against.\nThe median voter is $WHO$, with a support of $TOTAL$, due to:\n$REASONS$\n"
+ FOLLOWING_BACK_IMP_REF: "§WThere are $COUNT_FOR|G$ princes in favor of the reform and $COUNT_AGAINST|R$ against.\nThe median voter is §Y$WHO$§!, with a support of $TOTAL$, due to:\n$REASONS$\n"
  ALL_AGAUNST_IMP_REF: "There are §R$COUNT$§! princes against the reform:\n$WHO$"
  HEIR_CHANCE_TOOLTIP: "Our chance to get an heir is modified by $CHANCE$."
  HEIR_CHANCE_TOOLTIP2: "If our heir dies or gets disinherited, then our chance to get a new heir is modified by $CHANCE$."
@@ -1783,7 +1783,7 @@
  HREVOTE_RELATION: "Relations: $VAL$§W\n"
  HREVOTE_OVERLORD: "Being Vassal or Union: §G+$VAL$§W\n"
  HREVOTE_BIG_IN_HRE: "Dangerously powerful in the Empire: §G+$VAL$§W\n"
- HREVOTE_WE_TOO_SMALL: "Weak nation: §R$VAL$§W\n"
+ HREVOTE_WE_TOO_SMALL: "Weak nation: §G$VAL$§W\n"
  HREVOTE_NON_MEMBER: "Not a member of the SE: §R$VAL$§W\n"
  HREVOTE_IMPERIAL_AUTHORITY: "Imperial Authority: §G+$VAL$§W\n"
  HREVOTE_SAME_CULTURE: "Same Culture Group: §G+$VAL$§W\n"
