--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -803,7 +803,7 @@
  OWNED_DEV_IN_STATE: "You have $DEVELOPMENT|Y0$ development in $STATE|Y$."
  STATE_INCOME: "$STATE|Y$ Income: $INCOME|G$\n"
  STATE_MAINTENANCE: "$STATE|Y$ Maintenance: $MAINTENANCE|R$"
- BENEFIT_FOR_PROVINCE: "Empire provinces get:\n$MODIFIER$"
+ BENEFIT_FOR_PROVINCE: "§YEmpire provinces get§!:\n$MODIFIER$"
  emperor_per_prince_modifier: "Per Prince in Empire"
  gemeinerpfennig_emperor_per_prince: "Gemeiner Pfennig from Princes"
  hre_event.7.t: "The Perpetual Diet of [From.GetCapitalName]"
