--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -347,7 +347,9 @@
  desc_de_seliana_legacy_of_saelius: "[Root.Monarch.GetName] sees himself as a descendant of Imperator Vicarius Saelius."
 
  saelian.13.t: "The Decay of Imperium Saelianium"
- saelian.13.desc: "In the 1444th year since the Saelius walked into the city of Capira and established the eternal Saelian Empire - but his realm is now weaker than ever before. Centuries of external raids and barbaric conquests were only a fraction of the issues that were troubling the empire throughout all of its history. For most of the time, the emperor and the tetrarchy stood together in the name of preserving the empire, but long lines of weak and easily manipulated emperors lead to the tetrarchy not only gaining vast amounts of lands but also diploamtic control over the empire and the continent. It is fairly obvious that their only goal is to further the personal goals instead of securing the existence of the state and religion that provides for them."
+ saelian.13.desc: "In the 1444th year since the Saelius walked into the city of Capira and established the eternal Saelian Empire - but his realm is now weaker than ever before. Centuries of external raids and barbaric conquests were only a fraction of the issues that were troubling the empire throughout all of its history. For most of the time, the emperor and the tetrarchy stood together in the name of preserving the empire, but long lines of weak and easily manipulated emperors lead to the tetrarchy not only gaining vast amounts of lands but also diploamtic control over the empire and the continent. It is fairly obvious that their only goal is to further the personal goals instead of securing the existence of the state and religion that provides for them.\nExpecting the heir to the duchy of Kriegerstein, Albrecht von Schlaufberg, to be just as incompetent and easy to control as his father, tetrarch agreed to elect him as the next emperor."
+ promised_election: "Promised Election"
+ desc_promised_election: "Albrecht surely won't cause the tetrarchy any more problems than his father.."
  saelian.13.a: "May God save our Empire."
  TD_imperial_power_struggle: "Imperial Power Struggle"
  saelian.13.a_tt: "This opinion modifier will be inherited by new emperors."
@@ -915,6 +917,8 @@
  desc_lichter_unrest_mod: "The Nobles of Lichter and their allies have organized a rebellion across all of the northern provinces."
  SE_incident.201.b: "We will elevate the southern nobles so that they privileges match the colonial nobility."
  SE_incident.201.c: "A new Kuninstofship will effectively solve this problem"
+ SE_incident.201.c_tt0: "Every province with a §YLichterian§! core owned by our subjects will be ceded to Lichter."
+ SE_incident.201.c_tt: "Every province owned by emperor or its subjects of either §YMiddle Magreiner§! or §YNähtrucer§! cultures will be ceded to the new Kuninstofthum."
  SE_incident.202.t: "[Root.GovernmentName] of [Root.Owner.GetName] and the Empire"
  SE_incident.202.desc: "The wind of change has finally struck [Root.GetName]. With the growing ambitions of glorious [Root.Monarch.GetTitle] [Root.Monarch.GetName] we have reached a point where we are the ones to decide our own fate and not be dependent on other states. This poses important question - should we remain loyal to the emperor or stand on our own in this new and changing world?"
  SE_incident.202.a: "We shall remain faithful to [Emperor.Monarch.GetName]."
@@ -1013,3 +1017,6 @@
 
  sigilian_counter_reformation_mod: "Sigilian reconverters"
  desc_sigilian_counter_reformation_mod: "People of this province have once again put their trust in the emperor\n§YThis province cannot be converted by a Liemarian center of Reformation.§!"
+
+
+ hre_blankline: "§W"
