--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -4,7 +4,7 @@
  province_is_or_accepts_anhativaz_tt: "The Religion of §Y[Root.GetName]§! is §YAnhativaz§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_ilumist_tt: "The Religion of §Y[Root.GetName]§! is §YIlumist§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_uttarian_tt: "The Religion of §Y[Root.GetName]§! is §YUttarian§! and is either the State or the Syncretic Religion of the owner."
- province_is_or_accepts_eopedian_tt: "The Religion of §Y[Root.GetName]§! is §YEopedian is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_eopedian_tt: "The Religion of §Y[Root.GetName]§! is §YEopedian§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_kausali_tt: "The Religion of §Y[Root.GetName]§! is §YKausali§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_nahitar_tt: "The Religion of §Y[Root.GetName]§! is §YNahitar§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_sointuva_tt: "The Religion of §Y[Root.GetName]§! is §YSointuva§! and is either the State or the Syncretic Religion of the owner."
@@ -50,7 +50,7 @@
  mepis_tadzar_desc: "Magnificent Tomb turned into a cathedral, vital to the history of Zakarturi Empire."
  
  holy_mountain_nahitar: "Source of the Fadi"
- holy_mountain_nahitar_desc: "These mountains are said to be the cradle of mankind from which the 2 great sister rivers flow - belief central to the nahitar faith."
+ holy_mountain_nahitar_desc: "These mountains are said to be the cradle of mankind from which the river of Fadi flows from - belief central to the nahitar faith."
 
  holy_mountain_kausali: "Askaragihan Peak"
  holy_mountain_kausali_desc: "Meaning revelation mountain, this is where the great Nandak received the true wisdom of God."
