hengtua gov names changes and fixes

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -28,8 +28,8 @@
  tszelapsheng_reform_desc: "Profiting greatly from maritime trade across the great sea allowed the Tsutan city-states to consolidate their surrounding"
  kaansuentin_reform: "Kaansuentin"
  kaansuentin_reform_desc: "Huangchan theocracies justify their rule as heavenly blessing - rules are chosen by magic prophecies."
- gajifeng_chiefdom_reform: "Gajifeng Chiefdom"
- gajifeng_chiefdom_reform_desc: "Beautiful jungle of Dasenli made local tribes not only incredibly religious, but also skilled in traversing harsh terrain."
+ gajifeng_chiefdom_reform: "Gajifeng Kingdom"
+ gajifeng_chiefdom_reform_desc: "Despite the difficult to traverse terrain, Gajifeng states managed to construct roads and pathways allowing for an increased realm size."
 
  danshu_school: "Danshu"
  danshu_scholar_modifier: "Danshu Influences"
@@ -93,6 +93,9 @@
  TEMPLE: "Temple"
  HOLY_KINGDOM: "Heavenly Kingdom"
  SHANZI: "Shanzi"
+ SHANGZHUQUAN: "Shangzhuquan"
+ GUOTU: "Guotu"
+ GREAT_GUOTU: "Guotu"
 
 
  GREAT_GUI: "Great Gui"
