--- a/localisation/TD_01_flavour_okukaiga_l_english.yml
+++ b/localisation/TD_01_flavour_okukaiga_l_english.yml
@@ -21,3 +21,21 @@
  aoishima_minamichi_silk_desc: "Minamichhi is often renowned for being our windows to the west, as this is where the richest merchants and sailors have lived for generations. Their wealth not only brought them financial stability, but also allowed them to purchase incredibly luxurious goods. This caused Minamichi to develop a large and very competitive class of artisans, which produce silk clothes and tapestry of the highest quality not only in Okukaiga, but also Tsinhoi."
  aoishima_explore_the_eoduunso: "Explore the Eoduunso"
  aoishima_explore_the_eoduunso_desc: "Pine forest of Eoduunso have often been neglected by our merchants and lords for having not many settlemenents to influence and goods to exchange. However the rumors of rivers flowing with copper and silver caught the attention of some of our more ambitious leaders. Many of them plan expeditions up the river and even deep into the northern sea."
+
+ kokyan_ideas: "Kokyani Ideas"
+ kokyan_ideas_bonus: "Kokyani Ambition"
+ kokyan_ideas_start: "Kokyani Traditions"
+ kokyan_alliance_of_fishermen: "Alliance of Fishermen"
+ kokyan_alliance_of_fishermen_desc: "Roots of the Kokyan Domei can be traced to the federations of various fishing towns along the southern and eastern coast of Chushota and neighboring islands. Their purpose was to have an organised defense force against the ever expanding Cakrawalunian influences."
+ kokyan_iwamian_monasteries: "Iwamian Monasteris"
+ kokyan_iwamian_monasteries_desc: "In remote mountains of Iwamian live Xianga monks, once exiled from their homeland of Moongma following the rise of the Taamtau school. Commoners, merchants, nobles and even important statesmen pilgrimage to these mountains to consul with the wise Shanhohn."
+ kokyan_mines_of_azumaga: "Mines of Azumaga"
+ kokyan_mines_of_azumaga_desc: "For the most part, the metals mined in the mountains of Chushota were used either locally or as a decoration. With time, sailors started to reinforce their ships with copper to enforce them during naval confrontations."
+ kokyan_republican_roadways: "Republican Roadways"
+ kokyan_republican_roadways_desc: "One problem of the early Kokyan Domei was the mostly wild and ungoverned inland, which greatly hindered the towns' ability to expand and seek lumber and other resources. It was decided in 1103 to gather funds and construct a network of roads from south to north and east to west."
+ kokyan_winds_of_providence: "Winds of Providence"
+ kokyan_winds_of_providence_desc: "The summer northern and winter southern winds are incredibely useful not only to our merchants, but also to the fishermen who exploit the cycle to predict best fisheries at different times of the year."
+ kokyan_united_naval_command: "United Naval Command"
+ kokyan_united_naval_command_desc: "Compared to our western brothers, the defense navy was established as a single entity under a designated Domei Shusho, responsible for keeping order in the ranks and organizing impressment."
+ kokyan_okukaigan_unification: "Okukaigan Unification"
+ kokyan_okukaigan_unification_desc: "What was once just a wild dream, now is a plausible reality. Many wish to finally end the split between the three republics and finally stand together in the increasingly centralized world."
