Sahila Mercs Pt.1

--- a/localisation/TD_01_flavour_sahila_l_english.yml
+++ b/localisation/TD_01_flavour_sahila_l_english.yml
@@ -5,3 +5,16 @@
  urban_monarchy_reform: "Urbanized Tribe"
  urban_monarchy_reform_desc: "A system where the power in the country concentrated in the heavily fortified capital."
  mechanic_capital_bonus_dev_yes: "Chance for additional point of development when increasing development in the capital province."
+
+#Mercenary Companies
+merc_moonseekers: "Moonseekers"
+merc_reed_blades: "The Reed Blades"
+merc_chained_sons: "The Chained Sons"
+merc_antawilian_free_sharks: "Antawilian Free Sharks"
+merc_tusked_company: "The Tusked Company"
+merc_bleeding_hyenas: "The Bleeding Hyenas"
+merc_ironbound: "The Ironbound"
+merc_brightspear_guard: "Brightspear Guard"
+merc_flaming_jackals: "The Flaming Jackals"
+merc_oasis_gale: "The Oasis Gale"
+merc_brotherhood_of_dawn: "The Brotherhood of Dawn"
