--- a/localisation/TD_01_Flavour_sarikullu_l_english.yml
+++ b/localisation/TD_01_Flavour_sarikullu_l_english.yml
@@ -19,7 +19,7 @@
  sarikullan_ideas: "Šarikullan ideas"
  sarikullan_ideas_bonus: "Šarikullan Ambition"
  sarikullan_ideas_start: "Šarikullan Traditions"
- sarikullu_teneran_federation: "Teneran Federastion"
+ sarikullu_teneran_federation: "Teneran Federation"
  sarikullu_teneran_federation_desc: "The idea of Teneran nomads organizing into federations is not new, with records of Makarrian federation dating back to times before the cult of Ilum. As states of the plains and near the coast started to consolidate, so did the federations, clumping into bigger and bigger entities, in 987 finally encompassing most Braissli tribes."
  sarikullu_merchants_of_luxury: "Merchants of Luxury"
  sarikullu_merchants_of_luxury_desc: "The great Parroutan civilization produces many wonders sought after in the North, and thankfully the best routes pass through our land. This strengthens not only the purse of our merchants, but also their prestige and renown, often being the only ones able to supply the good in a relatively short time."
