Sahila Mercs Pt.2

--- a/localisation/TD_01_flavour_sahila_l_english.yml
+++ b/localisation/TD_01_flavour_sahila_l_english.yml
@@ -18,3 +18,11 @@ merc_brightspear_guard: "Brightspear Guard"
 merc_flaming_jackals: "The Flaming Jackals"
 merc_oasis_gale: "The Oasis Gale"
 merc_brotherhood_of_dawn: "The Brotherhood of Dawn"
+merc_pearl_host: "The Pearl Host"
+merc_gilded_sentinels: "The Gilded Sentinels"
+merc_crimson_cutthroats: "The Crimson Cutthroats"
+merc_shadowed_stalkers: "The Shadowed Stalkers"
+merc_bronze_vultures: "The Bronze Vultures"
+merc_ashen_legion: "The Ashen Legion"
+merc_mistwalkers: "Mistwalkers"
+merc_wardens_of_the_deep: "Wardens of the Deep"
