Five Formables and desjaniti setup prep

--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -201,3 +201,21 @@
 
  naramalk_nation_title: "Unite the River Realm @NRM"
  naramalk_nation_desc: "With the river kingdoms united, we must strive to build something bigger and even holier."
+ 
+ devatarastra_form_decision_title: "Proclaim the Devatarastra"
+ devatarastra_form_decision_desc: "It is time we realize our long-standing ambition of united Desjaniti state."
+ 
+ daksirajya_nation_title: "Reunite Southern Rajya @DKS"
+ daksirajya_nation_desc: "We are allied, and in good spirits, it is finally time for us to reunite into old glory of Daksirajya."
+ 
+ uttarirajya_nation_title: "Unite Northern Rajya @UTT"
+ uttarirajya_nation_desc: "Despite everyone wanting to conquer us, we have emerged victorious, it is time for us to unite Uttarirajya."
+ 
+ merkattirivi_nation_title: "Unite Coastal States @MKT"
+ merkattirivi_nation_desc: "We have conquered most of Amealungali states, and we should proclaim an western Viravananti kingdom."
+ 
+ viravarivi_nation_title: "Unite Viravananti People @VIR"
+ viravarivi_nation_desc: "We control most of Viravananti lands, it is time we should unite our brethren under one banner and one state."
+ 
+ jakihadesa_nation_title: "Proclaim Jakihakta Empire @JKI"
+ jakihadesa_nation_desc: "We have gained great territories, it is time for us to proclaim the Great Jakihadesa!"
