--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1119,7 +1119,16 @@
  PRD_ADJ: "Prabudavi"
  ZAR: "Zaradhu"
  ZAR_ADJ: "Zaradhian"
-
+ DKS: "Daksirajya"
+ DKS_ADJ: "Daksiraji"
+ UTT: "Uttarirajya"
+ UTT_ADJ: "Uttariraji"
+ VIR: "Viravarivi"
+ VIR_ADJ: "Viravananti"
+ MKT: "Merkattirivi"
+ MKT_ADJ: "Merkatti"
+ JKI: "Jakihadesa"
+ JKI_ADJ: "Jakihakta"
  
  TUA: "Tuall"
  TUA_ADJ: "Tuallian"
